[package]
name = "gentlepol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "macros",
    "uuid",
    "chrono",
]
